<resources>
    <!--Activity label strings-->
    <string name="app_name">Synesthesia</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_community">Community</string>

    <!--Preference group headers-->
    <string name="sensorsPref">Sensors</string>
    <string name="specialModes">Special Modes</string>
    <string name="About">About</string>

    <!--Recycler view item strings-->
    <string name="default_string">ImageTitle</string>
    <string name="remix_image">Remix Image</string>

    <!--Community button title-->
    <string name="community">Community</string>

    <!-- Strings related to Settings -->
    <!-- Sensor settings-->
    <string name="pref_title_display_name">Username</string>
    <string name="pref_default_display_name">Anonymous User</string>
    <string name="lightSummary">Enable light sensor input to change stroke opacity.</string>
    <string name="lightTitle">Dynamic Opacity</string>
    <string name="volumeSwitch">volume_switch</string>
    <string name="volumeSummary">Enable volume detection to change stroke width.</string>
    <string name="volumeTitle">Dynamic Stroke Width</string>
    <string name="lightSwitch">light_switch</string>
    <string name="strokeType">stroke_type</string>
    <string name="username">username</string>
    <string name="strokeTitle">Stroke Type</string>

    <!--String resources for the stroke type list preference-->
    <string-array name="stroke_list_titles">
        <item>Circle</item>
        <item>Square</item>
        <item>Triangle</item>
    </string-array>
    <string-array name="stroke_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- About settings section-->
    <string name="about_summary">This application allows users to use light sensor input, gyroscope
        sensor input and audio input to draw on a canvas. Light sensor input corresponds to the
        opacity of the draw stroke. Gyroscope sensor input controls the draw stroke position on the
        canvas. Audio input controls the draw stroke\'s color and width. The user has the option to
        allow special modes to draw patterns for them rather than using the gyroscope. Draw stroke
        width and opacity can also be fixed.
        One may save their creation on their device alone or upload it to the community gallery.
        From this gallery, community creations can be viewed and selected for \'remixing\'.
        Have a go at Synesthesia and behold the beauty of data!

    </string>

    <!-- Special mode settings-->
    <string name="radial_title">Radial Motion</string>
    <string name="spiral_title">Spiral Motion</string>
    <string name="spiralSummary">Disables gyroscopic input. Moves the paint brush in a spiral motion
        to and from the center automatically.</string>
    <string name="radialSummary">Disable gyroscopic input. Moves the paint brush radially outwards
        and inwards from the center. Rotates periodically.</string>

    <!--Bottom navigation option strings-->
    <string name="settings_nav">Settings</string>
    <string name="sensor_nav">Sensor</string>
    <string name="touch_nav">Touch</string>
    <string name="clear_nav">Clear</string>
    <string name="save_nav">Save</string>
</resources>
