<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Sensor Settings Group-->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="@string/username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/lightSwitch"
        android:summary="@string/lightSummary"
        android:title="@string/lightTitle" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/volumeSwitch"
        android:summary="@string/volumeSummary"
        android:title="@string/volumeTitle" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/stroke_list_titles"
        android:entryValues="@array/stroke_list_values"
        android:key="@string/strokeType"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/strokeTitle" />

</PreferenceScreen>
