<?xml version="1.0" encoding="utf-8"?>
<!--Bottom navigation options in the main activity-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_20px"
        android:title="@string/settings_nav" />

    <item
        android:id="@+id/sensorDraw"
        android:icon="@drawable/ic_baseline_settings_remote_24px"
        android:title="@string/sensor_nav" />

    <item
        android:id="@+id/touchDraw"
        android:icon="@drawable/ic_baseline_touch_app_24px"
        android:title="@string/touch_nav" />

    <item
        android:id="@+id/clearButton"
        android:icon="@drawable/ic_baseline_highlight_off_24px"
        android:title="@string/clear_nav" />

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_baseline_save_alt_24px"
        android:title="@string/save_nav" />

</menu>
