<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <!--Sensor preferences-->
    <header
        android:fragment="com.example.mtvan15.ui_sye.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_baseline_category_24px"
        android:title="@string/sensorsPref" />

    <!--Special mode preferences-->
    <header
        android:fragment="com.example.mtvan15.ui_sye.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_baseline_flare_24px"
        android:title="@string/specialModes" />

    <!--About the application section-->
    <header
        android:fragment="com.example.mtvan15.ui_sye.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/About" />

</preference-headers>
